--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 ---
-
+{{ site.baseurl }}
 <div class="page clearfix" index>
     <div class="left">
         <h1>Welcome to HyG's Blog!</h1>
-        <small>这里记录着我的前端学习之路{{ post.url | prepend: site.baseurl }}</small>
+        <small>这里记录着我的前端学习之路</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
